# bintext

./: Cargo.toml  Readme.md
.github/workflows/: rust.yml
benches/: bench.rs
src/: avx2.rs  fallback.rs  hex.rs  lib.rs  missing.rs  sse.rs  sse2.rs  tests.rs
src/hex/: avx2.rs  fallback.rs  sse2.rs  support.rs  tests.rs
