[package]
name = "bintext"
version = "0.1.1"
authors = ["lassade <felipe.jorge.pereira@gmail.com>"]
edition = "2018"
description = "Encode and decodes binary encoded text into aligned binary blobs using SIMD"
license = "MIT"
documentation = "https://docs.rs/bintext/"
repository = "https://github.com/lassade/bintext"
readme = "README.md"

[dependencies]

[dev-dependencies]
# bench basic support
rand = "0.7"
criterion = "0.3"
core_affinity = "0.5.10"

# compasition
hex = "0.4.2"
base16 = "0.2.1"
faster-hex = "0.4.1"
base64 = "0.12.3"
radix64 = "0.6.2"

[[bench]]
name = "bench"
harness = false